--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div id="footer"></div>
 
     <script src="js/jquery-3.5.1.min.js"></script>
-    <!--<script src="js/configpriv.js"></script>-->
+    <script src="js/configpriv.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>	
 </body>
