--- a/testimony.html
+++ b/testimony.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     
-    <div class="texto-testimony">
+    <div class="testimony-text">
         <h1 class="font-weight-bold text-center">ESTAMOS TRABAJANDO EN ELLO :)</h1>
     </div>
 
@@ -28,6 +28,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/configpriv.js"></script>
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>	
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/ff3482b296.js" crossorigin="anonymous"></script>
 </body>
 </html>
