--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     
-    <div class="texto-services">
+    <div class="services-text">
         <h1 class="font-weight-bold text-center">ESTAMOS TRABAJANDO EN ELLO :)</h1>
     </div>
 
@@ -29,5 +29,6 @@
     <script src="js/configpriv.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>	
+    <script src="https://kit.fontawesome.com/ff3482b296.js" crossorigin="anonymous"></script>
 </body>
 </html>
