--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
 
-
 </head>
 
 <body>
@@ -20,35 +19,9 @@
         </div>
         <div>
             <div class="image-container">
-                <img src="img/Fondosite.webp" id="fotofondo" alt="imagen-fondo">
+                <img src="img/Fondosite.webp" id="bg-photo" alt="imagen-fondo">
             </div>
         </div>
-    </div>
-
-    <div class="carruselct">
-      <div id="multiImageCarousel" class="slick-carousel">
-        <div>
-          <img src="img/coctelmmdin.jfif" class="d-block" alt="...">
-      </div>
-        <div>
-            <img src="img/coctelcm.jfif" class="d-block" alt="...">
-        </div>
-        <div>
-          <img src="img/coctelesmd.jfif" class="d-block" alt="...">
-        </div>
-        <div>
-            <img src="img/cocteldk.jfif" class="d-block" alt="...">
-        </div>
-        <div>
-            <img src="img/coctelesmjt.jfif" class="d-block" alt="...">
-        </div>
-        <div>
-          <img src="img/coctelmmd.jfif" class="d-block" alt="...">
-      </div>
-        <div>
-            <img src="img/coctelesmoj.jfif" class="d-block" alt="...">
-        </div>
-      </div>
     </div>
 
     <div class="container">    
@@ -93,7 +66,31 @@
               </div>
         </section>
     </div>
-    
+    <div class="carrousel">
+      <div id="multiImageCarousel" class="slick-carousel">
+        <div>
+          <img src="img/coctelmmdin.jfif" class="d-block" alt="...">
+      </div>
+        <div>
+            <img src="img/coctelcm.jfif" class="d-block" alt="...">
+        </div>
+        <div>
+          <img src="img/coctelesmd.jfif" class="d-block" alt="...">
+        </div>
+        <div>
+            <img src="img/cocteldk.jfif" class="d-block" alt="...">
+        </div>
+        <div>
+            <img src="img/coctelesmjt.jfif" class="d-block" alt="...">
+        </div>
+        <div>
+          <img src="img/coctelmmd.jfif" class="d-block" alt="...">
+      </div>
+        <div>
+            <img src="img/coctelesmoj.jfif" class="d-block" alt="...">
+        </div>
+      </div>
+    </div>
     <div id="footer"></div>
 
         <script src="js/jquery-3.5.1.min.js"></script>
@@ -101,6 +98,7 @@
         <script src="js/configpriv.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/ff3482b296.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
