--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
+<script src="https://kit.fontawesome.com/ff3482b296.js" crossorigin="anonymous"></script>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
         <div class="container">
