--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     
-    <div class="texto-gallery">
+    <div class="gallery-text">
         <h1 class="font-weight-bold text-center">ESTAMOS TRABAJANDO EN ELLO :)</h1>
     </div>
 
