--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,12 @@
+<script src="https://kit.fontawesome.com/ff3482b296.js" crossorigin="anonymous"></script>
 <footer>
     <section>
         <div id="Articulos" class="section icon-group mb-5">
             <a href="https://www.facebook.com/infoprimaverabar" target="_blank">
-                <img src="img/facebook.png" class="icon" alt="Icon 3">
+                <i class="fa-brands fa-facebook"></i>
             </a>
             <a href="https://www.instagram.com/primaverabarmovil/" target="_blank">
-                <img src="img/instagram.png" class="icon" alt="Icon 1">
+                <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
     </section>
@@ -13,7 +14,7 @@
     <div class="border-bottom"></div>
 
     <h1><strong>Primavera Bar</strong></h1>
-    <div class="letras-debajo">
+    <div class="letters-below">
         <h5 id="h5top">¡Al servicio de Trujilo y más allá!</h5>
         <h5>
             <a href="tel:+51999999999"><u>(51) 999-999-999</u></a>
