--- a/carta.html
+++ b/carta.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     
-    <div class="texto-carta">
+    <div class="text-letter">
         <h1 class="font-weight-bold text-center">ESTAMOS TRABAJANDO EN ELLO :)</h1>
     </div>
 
