--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/sobrenosotros.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="icon" href="img/logoprimbar.jpg">
 </head>
 
