--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <div class="custom-card">
             <img src="img/primbarteam.jfif" alt="Equipo Primavera Bar">
             <div class="card-content">
-                <h3 class="font-weight-bold" id="titulo">Primavera bar</h3>
+                <h3 class="font-weight-bold" id="titulo">Primavera Bar</h3>
                 <p>En Primavera Bar, nuestra misión es transformar cada evento en una celebración memorable a través de la mixología artesanal. Fundada por un equipo de apasionados por la coctelería, nuestra empresa se especializa en ofrecer servicios de catering de bar que combinan creatividad, calidad y un enfoque personalizado.</p>
                 <p>Creemos que cada ocasión es única, por lo que nos esforzamos en entender las necesidades y preferencias de nuestros clientes. Nuestro equipo de bartenders expertos está capacitado para crear cócteles innovadores, utilizando solo los mejores ingredientes frescos y técnicas de preparación de vanguardia. Desde clásicos atemporales hasta creaciones originales, cada bebida es elaborada con atención al detalle.</p>
                 <p>Nos enorgullece ofrecer un servicio excepcional y profesional, asegurando que cada aspecto de nuestra presentación esté a la altura de tus expectativas. Además, estamos comprometidos con la sostenibilidad, utilizando ingredientes locales y técnicas responsables en nuestros eventos.
