Update and rename carta.html to letter.html

--- a/letter.html
+++ b/letter.html
@@ -6,11 +6,11 @@
     <title>Carta</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/carta.css">
+    <link rel="stylesheet" href="css/letter.css">
     <link rel="icon" href="img/logoprimbar.jpg">
 </head>
 
-<body class="about-page">
+<body class="block-nav">
     <header>
         <div id="inicio">
             <div class="container">
@@ -19,7 +19,7 @@
         </div>
     </header>
     
-    <div class="text-letter">
+    <div class="letter-text">
         <h1 class="font-weight-bold text-center">ESTAMOS TRABAJANDO EN ELLO :)</h1>
     </div>
 
