--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="img/logoprimbar.jpg">
 </head>
 
-<body class="about-page">
+<body class="block-nav">
     <header>
         <div id="inicio">
             <div class="container">
@@ -28,7 +28,6 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/configpriv.js"></script>
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>	
-    <script src="https://kit.fontawesome.com/ff3482b296.js" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
