--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="img/logoprimbar.jpg">
 </head>
 
-<body class="about-page">
+<body class="block-nav">
     <header>
         <div id="inicio">
             <div class="container">
