--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/gallery.css">
+    
     <link rel="icon" href="img/logoprimbar.jpg">
 </head>
 
@@ -18,16 +20,107 @@
             </div>
         </div>
     </header>
-    
+
     <div class="gallery-text">
         <h1 class="font-weight-bold text-center">ESTAMOS TRABAJANDO EN ELLO :)</h1>
     </div>
+
+    <div class="container p-4 bg-secondary">
+        <div class="row justify-content-start">
+            <div class="col-2 m-4">
+                <img src="img/coctelcm.jfif" alt="" class="img-fluid">
+            </div>
+            <div class="col-2 m-4">
+                <img src="img/coctelesmjt.jfif" class="img-fluid">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-2 m-4">
+                <img src="img/coctelesmd.jfif" alt="" class="img-fluid">
+            </div>
+            <div class="col-2 m-4 ">
+                <img src="img/logoprimbar.jpg" class="img-fluid">
+            </div>
+        </div>
+        <div class="row justify-content-end">
+            <div class="col-2 m-4">
+                <img src="img/cocteldk.jfif" alt="" class="img-fluid">
+            </div>
+            <div class="col-2 m-4">
+                <img src="img/logoprimbar.jpg" class="img-fluid">
+            </div>
+        </div>
+        <div class="row justify-content-around">
+            <div class="col-2">
+                <img src="img/coctelcm.jfif" alt="" class="img-fluid">
+            </div>
+            <div class="col-2">
+                <img src="img/coctelesmjt.jfif" class="img-fluid">
+            </div>
+        </div>
+        <div class="row justify-content-between">
+            <div class="col-2">
+                <img src="img/coctelmmd.jfif" class="img-fluid">
+            </div>
+            <div class="col-2 ">
+                <img src="img/coctelmmdin.jfif" class="img-fluid">
+            </div>
+        </div>
+    </div>
+    <div class="container bg-light">
+            <h1 class="text-center pt-4">Galería</h1>
+        <div class="gallery">
+            <div class="col-md-auto">
+                <div class="foto1">
+                    <img src="img/coctelmmdin.jfif">
+                </div>
+            </div>
+
+
+            <div class="col-md-3">
+                <div class="foto2">
+                    <img src="img/logoprimbar.jpg">
+                </div>
+
+                <div class="foto3 float-right">
+                    <img src="img/coctelesmoj.jfif">
+                </div>
+            </div>
+            <div class="col-md-auto justify-content-between">
+                <div class="row justify-content-md-center">
+                    <div class="col-md-auto">
+                        <div class="foto4">
+                            <img src="img/coctelesmd.jfif">
+                        </div>
+                    </div>
+                    <div class="col-md-auto">
+                        <div class="foto5">
+                            <img src="img/Fondosite.webp">
+                        </div>
+                    </div>
+
+
+
+                </div>
+                <div class="row">
+                    <div class="foto6">
+                        <img src="img/cocteldk.jfif">
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+
 
     <div id="footer"></div>
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/configpriv.js"></script>
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>	
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
